--- a/index.html
+++ b/index.html
@@ -59,25 +59,25 @@
 							<section>
 								<ul class="links">
 									<li>
-										<a href="#">
+										<a href="blog">
 											<h3>Blog</h3>
 											<!--<p>Feugiat tempus veroeros dolor</p>-->
 										</a>
 									</li>
 									<li>
-										<a href="#">
+										<a href="music">
 											<h3>Music</h3>
 											<!--<p>Sed vitae justo condimentum</p>-->
 										</a>
 									</li>
 									<li>
-										<a href="#">
+										<a href="portfolio">
 											<h3>Portfolio</h3>
 											<!--<p>Phasellus sed ultricies mi congue</p>-->
 										</a>
 									</li>
 									<li>
-										<a href="#">
+										<a href="about">
 											<h3>About</h3>
 											<!--<p>Porta lectus amet ultricies</p>-->
 										</a>
@@ -640,6 +640,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
                         <script src="bower_components/angular/angular.js"></script>
+			<script src="bower_components/angular-route/angular-route.js"></script>
 
 	</body>
 </html>
